# ShadyNeuralNetwork

./: .gitignore  .gitmodules  Cargo.toml  README.md
damage/: Cargo.toml  README.md
gpu_math/: Cargo.toml
network_maker/: Cargo.toml
notes/: gpu_indexing.md
shady_neural_net/: Cargo.toml
shady_neural_net/src/: layer.rs  lib.rs  main.rs  neural_network.rs  utils.rs
shady_neural_net/src/layer/: bind_group_macro.rs  dense_layer.rs  errors.rs  input_layer.rs  mod.rs  output_layer.rs  weight_distribution.rs
shady_neural_net/src/layer_structs/: activation.rs  bias.rs  loss.rs  mod.rs  regularization.rs
shady_neural_net/src/layers/: activation_function.rs  input.rs  layer.rs  loss_function.rs  mod.rs  output.rs
shady_neural_net/src/shaders/: dense_layer.wgsl  input_layer.wgsl  output_layer.wgsl
shady_neural_net/src/shaders/activation_function_gradients/: d_relu.wgsl  d_softmax.wgsl  d_step.wgsl
shady_neural_net/src/shaders/activation_functions/: relu.wgsl  softmax.wgsl
shady_neural_net/src/shaders/dense_layer/: back_propogate.wgsl  coeff.wgsl  dense_layer_coefficient_forming.wgsl  dense_layer_feed_forward.wgsl  dense_layer_gradient_descent.wgsl  dense_layer_regularization.wgsl  feed_forward.wgsl
shady_neural_net/src/shaders/loss_function_gradients/: d_log_loss.wgsl
shady_neural_net/src/shaders/loss_functions/: log_loss.wgsl
shady_neural_net/src/shaders/output_layer/: back_propogate.wgsl  feed_forward.wgsl  loss.wgsl  output_layer_cost_function.wgsl  output_layer_feed_forward.wgsl  output_layer_gradient_descent.wgsl  output_layer_regularization.wgsl
(+33 files in other folders)
