[package]
name = "shady_neural_net"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }
log = "0.4.26"
pollster = "0.4.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wgpu = "24.0.1"
gpu_math = { path = "../gpu_math" }
damage = { path = "../damage" }
anyhow = "1.0.98"
